Added ref papers

--- a/publications/Midcurve_LaTeX/Main_topoval_upgraded.tex
+++ b/publications/Midcurve_LaTeX/Main_topoval_upgraded.tex
@@ -2,6 +2,11 @@
 \usepackage{amsmath,amssymb}
 \usepackage{hyperref}
 \usepackage{graphicx}
+\usepackage{mathtools}
+\usepackage{amsthm}
+\usepackage{booktabs}
+\usepackage{array}
+
 \begin{document}
 \title{Topological Validation of Mid-Surface Computed from Sheet Metal Parts: Rigorous Mathematical Framework and Enhanced Validation}
 \author{
@@ -11,12 +16,18 @@
 \IEEEauthorblockA{\IEEEauthorrefmark{3}Siemens PLM, Pune, India}
 \IEEEauthorblockA{Emails: {\href{mailto:kulkarniyh12.mech@coep.ac.in}{kulkarniyh12.mech@coep.ac.in}, \href{mailto:director@coep.ac.in}{director@coep.ac.in}, \href{mailto:Mukund_kale@hotmail.com}{Mukund_kale@hotmail.com}}}
 }
-\maketitle \begin{abstract}
+\maketitle
+
+\begin{abstract}
 During the initial stages of iterative design processes, quick Computer-Aided Engineering (CAE) analysis of Computer-Aided Design (CAD) models is essential. Thin-walled parts, such as sheet metal components, are often abstracted to mid-surfaces to reduce computational resources. The mid-surface must mimic the original solid both geometrically and topologically. Widely-used geometric methods relying on Hausdorff distance computation are computationally intensive and error-prone. This paper provides a rigorous topological method for mid-surface verification with enhanced mathematical foundations. We derive novel topological transformation relationships between sheet metal parts and their mid-surfaces in both directions (solid-to-surface and surface-to-solid), grounded in cellular homology and simplicial complex theory. We establish formal definitions of cellular decomposition conditions, connect our approach to persistent homology frameworks for robustness assessment, and provide comprehensive theoretical justification. The method is validated against state-of-the-art approaches including persistent homology-based methods and machine learning-enhanced mesh quality assessment. Empirical evaluation demonstrates computational efficiency: $O(V+E+F)$ complexity compared to Hausdorff distance $O(n^2)$ approximations.
-\end{abstract} \begin{IEEEkeywords}
+\end{abstract} 
+
+\begin{IEEEkeywords}
 CAD, CAE, topology, Euler characteristic, Betti numbers, sheet metal parts, mid-surface, cellular decomposition, persistent homology, topological data analysis
-\end{IEEEkeywords} \section{Introduction}
-Mid-surface abstraction is a critical preprocessing step in CAE workflows. It creates shell element meshes from solid models of thin-walled components, reducing degrees of freedom by 70--90% while preserving structural behavior. An effective mid-surface must exhibit:
+\end{IEEEkeywords} 
+
+\section{Introduction}
+Mid-surface abstraction is a critical preprocessing step in CAE workflows. It creates shell element meshes from solid models of thin-walled components, reducing degrees of freedom by 70--90\% while preserving structural behavior. An effective mid-surface must exhibit:
 \begin{itemize}
 \item \textbf{Geometric correspondence}: Surfaces lie at half the original thickness with minimal deviation.
 \item \textbf{Topological equivalence}: Connectivity structure mirrors the original solid's topology.
@@ -32,7 +43,7 @@ Following \cite{Chen2006} and \cite{Woo2003}, thin-walled solids exhibit:
 \begin{itemize}
 \item \textbf{Constant thickness}: $t \approx \text{const}$, $t \ll \max(\text{lateral dimensions})$.
 \item \textbf{Absence of blind holes}: Only through-holes exist (or no holes).
-\item \textbf{Non-degeneracy}: No capping faces with zero thickness (e.g., wedge'' features). \item \textbf{No embedded cavities}: Absence of bubble'' volumes within the material.
+\item \textbf{Non-degeneracy}: No capping faces with zero thickness (e.g., ``wedge'' features). \item \textbf{No embedded cavities}: Absence of ``bubble'' volumes within the material.
 \item \textbf{Acyclic shell topology}: For sheet metal, genus $g \le 5$ typically.
 \end{itemize}
 These constraints ensure the applicability of standard cellular decomposition algorithms without generating degenerate topological elements. \subsection{Mid-Surface Computation: State of the Art}
@@ -58,665 +69,221 @@ This paper makes the following enhancements:
 \item \textbf{Comprehensive Validation}: Evaluation against 50+ CAD models, comparison with existing tools, complexity analysis.
 \item \textbf{Robustness Framework}: Analysis of failure modes and decomposition sensitivity.
 \item \textbf{State-of-the-Art Integration}: Incorporation of recent methods (TopoSculpt \cite{Hu2024}, neural network-based quality assessment).
-\end{enumerate} \section{Mathematical Foundations}
+\end{enumerate} 
+
+
+
+\section{Mathematical Foundations}
+
 \subsection{Boundary Representation and Topological Preliminaries}
+
 A boundary representation (BRep) encodes geometric models via:
 \begin{itemize}
-\item \textbf{Shells (s)}: Connected face sets forming closed or open surfaces.
-\item \textbf{Faces (f)}: Bounded surface portions.
-\item \textbf{Loops (l)}: Edge circuits bounding faces.
-\item \textbf{Half-edges (he)}: Directed edge segments for loop orientation.
-\item \textbf{Edges (e)}: Bounded curve portions.
-\item \textbf{Vertices (v)}: Point locations.
+    \item \textbf{Shells (s)}: Connected face sets forming closed or open surfaces.
+    \item \textbf{Faces (f)}: Bounded surface portions.
+    \item \textbf{Loops (l)}: Edge circuits bounding faces.
+    \item \textbf{Half-edges (he)}: Directed edge segments for loop orientation.
+    \item \textbf{Edges (e)}: Bounded curve portions.
+    \item \textbf{Vertices (v)}: Point locations.
 \end{itemize}
+
 We formalize this as a topological cell complex:
-X
-=
-(
-⋃
-i
-=
-0
-3
-C
-i
-,
- 
-∂
-)
-,
-X=( 
-i=0
-⋃
-3
-​
- C 
-i
-​
- , ∂),
-where $C_i$ is the set of $i$-dimensional cells and $\partial: C_i \to C_{i-1}$ are boundary operators satisfying $\partial \circ \partial = 0$ \cite{Munkres2000}. \subsection{Euler Characteristic: Unified Framework}
+\[
+X = \bigl(\bigcup_{i=0}^{3} C_i,\, \partial \bigr),
+\]
+where $C_i$ is the set of $i$-dimensional cells and $\partial : C_i \to C_{i-1}$ are boundary operators satisfying $\partial \circ \partial = 0$ \cite{Munkres2000}.
+
+\subsection{Euler Characteristic: Unified Framework}
+
 \begin{definition}
 For a finite cell complex $\mathcal{X}$ of dimension $d$:
-χ
-(
-X
-)
-=
-∑
-i
-=
-0
-d
-(
-−
-1
-)
-i
-N
-i
-=
-∑
-i
-=
-0
-d
-(
-−
-1
-)
-i
-β
-i
-,
-χ(X)= 
-i=0
-∑
-d
-​
- (−1) 
-i
- N 
-i
-​
- = 
-i=0
-∑
-d
-​
- (−1) 
-i
- β 
-i
-​
- ,
+\[
+\chi(\mathcal{X})
+= \sum_{i=0}^{d} (-1)^i N_i
+= \sum_{i=0}^{d} (-1)^i \beta_i,
+\]
 \end{definition}
-where $N_i$ is the count of $i$-dimensional cells and $\beta_i$ is the $i$-th Betti number, defined as:
-β
-i
-=
-\rank
-(
-H
-i
-(
-X
-)
-)
-.
-β 
-i
-​
- =\rank(H 
-i
-​
- (X)).
+where $N_i$ is the number of $i$-dimensional cells and $\beta_i$ is the $i$-th Betti number,
+\[
+\beta_i = \operatorname{rank}\bigl(H_i(\mathcal{X})\bigr).
+\]
+
 Here $H_i(\mathcal{X})$ is the $i$-th homology group obtained from the chain complex:
-0
-⟵
-C
-0
-←
-∂
-1
-C
-1
-←
-∂
-2
-C
-2
-←
-∂
-3
-C
-3
-⟵
-0.
-0⟵C 
-0
-​
-  
-∂ 
-1
-​
- 
-​
- C 
-1
-​
-  
-∂ 
-2
-​
- 
-​
- C 
-2
-​
-  
-∂ 
-3
-​
- 
-​
- C 
-3
-​
- ⟵0.
+\[
+0 \leftarrow C_0 \xleftarrow{\partial_1} C_1 \xleftarrow{\partial_2} C_2 
+\xleftarrow{\partial_3} C_3 \leftarrow 0.
+\]
+
 The $i$-th homology group is:
-H
-i
-=
-ker
-⁡
-(
-∂
-i
-)
- 
-/
- 
-I
-m
-(
-∂
-i
-+
-1
-)
-,
-H 
-i
-​
- =ker(∂ 
-i
-​
- ) / Im(∂ 
-i+1
-​
- ),
-where $\ker(\partial_i)$ are the $i$-cycles and $\mathrm{Im}(\partial_{i+1})$ are the $i$-boundaries. Intuitively:
+\[
+H_i = \ker(\partial_i)\,/\,\operatorname{Im}(\partial_{i+1}),
+\]
+where $\ker(\partial_i)$ are cycles and $\operatorname{Im}(\partial_{i+1})$ are boundaries.
+
+Intuitively:
 \begin{itemize}
-\item $\beta_0$: number of connected components.
-\item $\beta_1$: dimension of $H_1$, roughly the number of independent loops (genus-related).
-\item $\beta_2$: dimension of $H_2$, roughly the number of independent cavities/voids.
+    \item $\beta_0$: number of connected components
+    \item $\beta_1$: independent loops (genus-related)
+    \item $\beta_2$: independent cavities/voids
 \end{itemize}
+
 For a 3D complex:
-N
-0
-−
-N
-1
-+
-N
-2
-−
-N
-3
-=
-β
-0
-−
-β
-1
-+
-β
-2
-−
-β
-3
-.
-N 
-0
-​
- −N 
-1
-​
- +N 
-2
-​
- −N 
-3
-​
- =β 
-0
-​
- −β 
-1
-​
- +β 
-2
-​
- −β 
-3
-​
- .
-For a 2D surface (setting $N_3=0$):
-N
-0
-−
-N
-1
-+
-N
-2
-=
-β
-0
-−
-β
-1
-+
-β
-2
-.
-N 
-0
-​
- −N 
-1
-​
- +N 
-2
-​
- =β 
-0
-​
- −β 
-1
-​
- +β 
-2
-​
- .
+\[
+N_0 - N_1 + N_2 - N_3 = \beta_0 - \beta_1 + \beta_2 - \beta_3.
+\]
+
+For a 2D surface ($N_3 = 0$):
+\[
+N_0 - N_1 + N_2 = \beta_0 - \beta_1 + \beta_2.
+\]
+
 \subsection{Manifold Solids: Euler-Poincaré Equation}
+
 \begin{definition}
 A 2-manifold is a topological space where each point has a neighborhood homeomorphic to an open disk in $\mathbb{R}^2$.
 \end{definition}
-For a closed 3D manifold solid with genus $g$ (number of topological holes), the Euler-Poincaré equation \cite{Heisserman1991} states:
-v
-−
-e
-+
-(
-f
-−
-r
-)
-=
-2
-(
-s
-−
-g
-)
-,
-v−e+(f−r)=2(s−g),
+
+For a closed 3D manifold solid with genus $g$:
+\[
+v - e + (f - r) = 2(s - g),
+\]
 where:
 \begin{itemize}
-\item $v,e,f$: vertices, edges, faces.
-\item $r$: count of inner loops (face boundaries containing holes).
-\item $s$: number of shells (connected components).
-\item $g$: genus (number of handles).
+    \item $v, e, f$: vertices, edges, faces
+    \item $r$: number of inner loops (face holes)
+    \item $s$: number of shells (connected components)
+    \item $g$: genus (number of handles)
 \end{itemize}
+
 In terms of Betti numbers:
-β
-0
-=
-s
-,
-β
-1
-=
-2
-g
-,
-β
-2
-=
-s
-,
-β 
-0
-​
- =s,β 
-1
-​
- =2g,β 
-2
-​
- =s,
-since a genus-$g$ surface has $2g$ independent cycles, and each shell encloses a cavity. \subsection{Non-Manifold Surfaces}
+\[
+\beta_0 = s,\qquad \beta_1 = 2g,\qquad \beta_2 = s.
+\]
+
+\subsection{Non-Manifold Surfaces}
+
 \begin{definition}
 A surface is non-manifold if it violates manifold properties, for example:
 \begin{itemize}
-\item An edge shared by more than 2 faces (branching, non-orientable).
-\item A vertex with multiple shell-uses (T-junctions).
-\item Local neighborhoods not homeomorphic to disks.
+    \item an edge shared by more than two faces,
+    \item a vertex with multiple shell-uses (T-junction),
+    \item neighborhoods not homeomorphic to disks.
 \end{itemize}
 \end{definition}
-For non-manifold surface complexes, the generalized Euler characteristic is given by:
-v
-−
-e
-+
-(
-f
-−
-r
-)
-=
-s
-−
-h
-,
-v−e+(f−r)=s−h,
-where $h$ represents the effective handle count under non-manifold conditions \cite{Sequin2015}. Intuitively, a non-manifold surface lacks a well-defined interior, so the Euler characteristic is one degree less than for a closed solid. Importantly, for any non-manifold surface in $\mathbb{R}^3$, $\beta_2 = 0$ \cite{Woo2003}. This is because any 2-cycle on the surface can be continuously deformed to the boundary (or reduced to a point), implying $H_2=0$. \section{Cellular Decomposition Theory}
+
+For non-manifold surface complexes:
+\[
+v - e + (f - r) = s - h,
+\]
+where $h$ is the effective handle count \cite{Sequin2015}.
+
+Importantly, for any non-manifold surface in $\mathbb{R}^3$, $\beta_2 = 0$ \cite{Woo2003}, since any 2-cycle can collapse to a boundary.
+
+\section{Cellular Decomposition Theory}
+
 \subsection{Cellular Decomposition: Formal Definition}
+
 \begin{definition}
 A cellular decomposition of a solid $S$ is a partition:
-S
-=
-(
-⋃
-i
-,
-j
-C
-i
-j
-)
-∪
-(
-⋃
-i
-,
-j
-I
-i
-j
-)
-,
-S=( 
-i,j
-⋃
-​
- C 
-ij
-​
- )∪( 
-i,j
-⋃
-​
- I 
-ij
-​
- ),
-where each $\mathcal{C}{ij}$ is a cell of dimension $d_i\in{0,1,2,3}$, subject to:
+\[
+S = \bigcup_{i,j} C_{ij},
+\]
+where each $C_{ij}$ is a cell of dimension $d_i \in \{0,1,2,3\}$, subject to:
 \begin{enumerate}
-\item \textbf{Closure}: Each cell $\mathcal{C}{ij}$ is homeomorphic to a $d_i$-dimensional convex polytope.
-\item \textbf{Disjoint interiors}: $\text{int}(\mathcal{C}{ij}) \cap \text{int}(\mathcal{C}{k\ell}) = \emptyset$ for $(i,j)\neq(k,\ell)$.
-\item \textbf{Finite boundaries}: Each cell has finitely many boundary cells of lower dimension.
-\item \textbf{No degeneracies}: No isolated vertices or dangling edges (unless part of the specified boundary).
-\item \textbf{Cleanness}: No inter-cell intersections except at boundaries; boundaries have codimension exactly 1; interface cells are maximal intersections.
+    \item \textbf{Closure}: each $C_{ij}$ is homeomorphic to a $d_i$-polytope.
+    \item \textbf{Disjoint interiors}: $\operatorname{int}(C_{ij}) \cap \operatorname{int}(C_{kl}) = \varnothing$ for $(i,j)\neq(k,l)$.
+    \item \textbf{Finite boundaries}: each cell has finitely many lower-dimensional boundary cells.
+    \item \textbf{No degeneracies}: no isolated vertices or dangling edges unless prescribed.
+    \item \textbf{Cleanness}: intersections occur only at boundaries of codimension 1.
 \end{enumerate}
 \end{definition}
-Interface cells are classified as:
+
+Interface cells:
 \begin{itemize}
-\item \textbf{2D-interface}: Two volumes share a face, defining a (2D) surface interface.
-\item \textbf{3D-interface}: Two volumes overlap, defining a (3D) volumetric interface.
-\end{itemize} \subsection{Cellular Homology and Transformation Maps}
+    \item \textbf{2D-interface}: two volumes share a face.
+    \item \textbf{3D-interface}: two volumes overlap volumetrically.
+\end{itemize}
+
+\subsection{Cellular Homology and Transformation Maps}
+
 \begin{definition}
-A \emph{cellular homomorphism} between cell complexes $\mathcal{X}$ and $\mathcal{Y}$ is a map $\phi: \mathcal{X}\to\mathcal{Y}$ such that:
+A \emph{cellular homomorphism} $\phi:\mathcal{X}\to\mathcal{Y}$ satisfies:
 \begin{itemize}
-\item $\phi$ maps $i$-cells of $\mathcal{X}$ to $i$-cells (or lower-dimensional cells) of $\mathcal{Y}$.
-\item $\phi$ preserves adjacency: if $c_1 \subset \partial c_2$ in $\mathcal{X}$ then $\phi(c_1) \subset \partial \phi(c_2)$ in $\mathcal{Y}$.
-\item $\phi$ induces a chain map on cellular chains: $\phi_: C_i(\mathcal{X}) \to C_i(\mathcal{Y})$.
+    \item $\phi$ maps $i$-cells to $i$- or lower-dimensional cells,
+    \item if $c_1 \subset \partial c_2$, then $\phi(c_1) \subset \partial\phi(c_2)$,
+    \item $\phi$ induces a chain map $\phi_* : C_i(\mathcal{X}) \to C_i(\mathcal{Y})$.
 \end{itemize}
 \end{definition}
-Such maps induce homomorphisms on homology groups: $\phi_: H_i(\mathcal{X}) \to H_i(\mathcal{Y})$. Our transformation equations (see below) define such cellular homomorphisms. \section{Topological Dimension Reduction: Solid-to-Surface}
+
+This induces homomorphisms:
+\[
+\phi_* : H_i(\mathcal{X}) \to H_i(\mathcal{Y}).
+\]
+
+\section{Topological Dimension Reduction: Solid-to-Surface}
+
 \subsection{Transformation Equations with Enhanced Justification}
-When a thin-walled solid is abstracted to its mid-surface, each 3D cell undergoes dimension reduction: \medskip
-\noindent\textbf{Case 1: Isolated solid cell ($\text{sCell}{3,0}$, no neighbors).}
-The mid-surface cell $\text{mCell}{2,0}$ has:
-f
-=
-1
-,
-e
-=
-4
-,
-v
-=
-4.
-f=1,e=4,v=4.
-Justification: A rectangular block yields one mid-face, with 4 edges and 4 vertices (Euler: $4-4+1=1$, consistent with a disk). \medskip
-\noindent\textbf{Case 2: Solid cell with $n$ touching sides ($\text{sCell}{3,n}$, $1\le n\le 2$).}
-The mid-surface cell $\text{mCell}{2,n}$ has:
-f
-=
-1
-,
-e
-=
-4
-−
-n
-,
-v
-=
-4
-−
-2
-n
-.
-f=1,e=4−n,v=4−2n.
-Justification: With $n$ adjacent faces, each shared face effectively removes one boundary edge (absorbed into an interface) and two vertices. Thus $e=4-n$ and $v=4-2n$. \medskip
-\noindent\textbf{Case 3: Through-hole cell ($\text{sCell}{3,h}$).}
-The mid-surface $\text{mCell}{2,h}$ is a topological loop with:
-f
-=
-0
-,
-e
-=
-1
-,
-v
-=
-1.
-f=0,e=1,v=1.
-Justification: A cylindrical hole becomes a closed loop (a degenerate 2-cell) with one edge and one vertex (Euler: $1-1+0=0$, a circle). \medskip
-\noindent\textbf{Case 4: Volume-interface cell ($\text{iCell}_{3,n}$).}
-The mid-surface becomes a 1D cell with:
-f
-=
-0
-,
-e
-=
-1
-,
-v
-=
-2.
-f=0,e=1,v=2.
-This represents a radial edge connecting two separate mid-surfaces (one vertex on each). \medskip
-\noindent\textbf{Case 5: Face-interface cell ($\text{iCell}_{2,2}$).}
-Also yields a 1D interface:
-f
-=
-0
-,
-e
-=
-1
-,
-v
-=
-2.
-f=0,e=1,v=2.
-This edge connects the mid-faces of the two volumes that shared a face. \subsection{Solid-to-Surface Prediction Procedure}
+
+\textbf{Case 1: Isolated solid cell} ($\mathrm{sCell}_{3,0}$)
+\[
+f = 1,\quad e = 4,\quad v = 4.
+\]
+
+\textbf{Case 2: Solid cell with $n$ touching sides} ($\mathrm{sCell}_{3,n}$, $1 \le n \le 2$)
+\[
+f = 1,\quad e = 4 - n,\quad v = 4 - 2n.
+\]
+
+\textbf{Case 3: Through-hole cell} ($\mathrm{sCell}_{3,h}$)
+\[
+f = 0,\quad e = 1,\quad v = 1.
+\]
+
+\textbf{Case 4: Volume-interface cell} ($\mathrm{iCell}_{3,n}$)
+\[
+f = 0,\quad e = 1,\quad v = 2.
+\]
+
+\textbf{Case 5: Face-interface cell} ($\mathrm{iCell}_{2,2}$)
+\[
+f = 0,\quad e = 1,\quad v = 2.
+\]
+
+\subsection{Solid-to-Surface Prediction Procedure}
+
 \begin{enumerate}
-\item \textbf{Classify all cells}: Identify each decomposition cell type and count occurrences: $N_{\text{sCell}{3,n}}$, $N{\text{iCell}{3,n}}$, $N{\text{iCell}{2,2}}$, $N{\text{sCell}_{3,h}}$.
-\item \textbf{Apply transformation formulas}: Using the above cases, compute predicted mid-surface entities for each cell.
-\item \textbf{Aggregate contributions}: Sum contributions from all cells:
-Total faces
-=
-∑
-n
-N
-sCell
-3
-,
-n
-,
-Total faces=∑ 
-n
-​
- N 
-sCell 
-3,n
-​
- 
-​
- ,
-Total radial edges
-=
-∑
-n
-N
-iCell
-3
-,
-n
-+
-N
-iCell
-2
-,
-2
-,
-Total radial edges=∑ 
-n
-​
- N 
-iCell 
-3,n
-​
- 
-​
- +N 
-iCell 
-2,2
-​
- 
-​
- ,
-Total vertices
-=
-∑
-n
-N
-sCell
-3
-,
-n
-(
-4
-−
-2
-n
-)
-+
-∑
-n
-N
-iCell
-3
-,
-n
-(
-2
-)
-+
-N
-iCell
-2
-,
-2
-(
-2
-)
-+
-N
-sCell
-3
-,
-h
-.
-Total vertices=∑ 
-n
-​
- N 
-sCell 
-3,n
-​
- 
-​
- (4−2n)+∑ 
-n
-​
- N 
-iCell 
-3,n
-​
- 
-​
- (2)+N 
-iCell 
-2,2
-​
- 
-​
- (2)+N 
-sCell 
-3,h
-​
- 
-​
- .
-\item \textbf{Validate Euler characteristic}: Check $v - e + (f - r) = s - h$ (for non-manifold surface).
-\item \textbf{Compare with actual}: Count the actual mid-surface entities (faces, edges, vertices) and report discrepancies.
-\end{enumerate} \section{Topological Dimension Addition: Surface-to-Solid}
+    \item Classify all cells: count $N_{\mathrm{sCell}_{3,n}}$, $N_{\mathrm{iCell}_{3,n}}$, $N_{\mathrm{iCell}_{2,2}}$, etc.
+    \item Apply transformation formulas per case.
+    \item Aggregate contributions:
+    \[
+    F = \sum_n N_{\mathrm{sCell}_{3,n}},
+    \]
+    \[
+    E = \sum_n N_{\mathrm{iCell}_{3,n}} + N_{\mathrm{iCell}_{2,2}},
+    \]
+    \[
+    V = \sum_n N_{\mathrm{sCell}_{3,n}}(4-2n)
+      + \sum_n N_{\mathrm{iCell}_{3,n}}(2)
+      + 2N_{\mathrm{iCell}_{2,2}}
+      + N_{\mathrm{sCell}_{3,h}}.
+    \]
+    \item Validate Euler characteristic:
+    \[
+    v - e + (f - r) = s - h.
+    \]
+    \item Compare predicted vs. extracted mid-surface topology.
+\end{enumerate}
+
+
+
+\section{Topological Dimension Addition: Surface-to-Solid}
 \subsection{Thickening Operation and Dimension-Addition Equations}
 Thickening a mid-surface $M$ back into a solid $S$ via offsetting yields predicted solid entities:
 \begin{align}
-v_m &= 2(v_s + v_i) + \sum_r n_r v_r,\
-e_m &= 2(e_s + e_{sr} + e_{rr} + e_i) + \sum_r n_r e_r + v_s + v_i,\
-f_m &= 2f + e_s + l_p + e_i,\
-s_m &= s,\
+v_m &= 2(v_s + v_i) + \sum_r n_r v_r, \\
+e_m &= 2(e_s + e_{sr} + e_{rr} + e_i) + \sum_r n_r e_r + v_s + v_i, \\
+f_m &= 2f + e_s + l_p + e_i, \\
+s_m &= s, \\
 h_m &= r_i.
 \end{align}
 Derivation (brief):
@@ -736,72 +303,12 @@ Derivation (brief):
 Beyond single-scale Euler validation, we introduce persistent homology analysis for robustness.
 \begin{definition}
 For a family of cellular decompositions $\mathcal{X}(\epsilon)$ (varying refinement), the \emph{persistent Betti number} from scale $\epsilon_1$ to $\epsilon_2$ is
-β
-i
-p
-e
-r
-s
-(
-ϵ
-1
-→
-ϵ
-2
-)
-=
-\rank
-(
-f
-∗
-:
-H
-i
-(
-X
-(
-ϵ
-1
-)
-)
-→
-H
-i
-(
-X
-(
-ϵ
-2
-)
-)
-)
-,
-β 
-i
-pers
-​
- (ϵ 
-1
-​
- →ϵ 
-2
-​
- )=\rank(f 
-∗
-​
- :H 
-i
-​
- (X(ϵ 
-1
-​
- ))→H 
-i
-​
- (X(ϵ 
-2
-​
- ))),
+\[
+\beta_i^{\text{pers}}(\epsilon_1 \rightarrow \epsilon_2)
+  = \operatorname{rank}\bigl(f_* : H_i(\mathcal{X}(\epsilon_1))
+  \to H_i(\mathcal{X}(\epsilon_2)) \bigr),
+\]
+
 where $f$ is the inclusion map.
 \end{definition}
 Topological features persisting across multiple scales are more robust. For mid-surface validation:
@@ -812,46 +319,7 @@ Topological features persisting across multiple scales are more robust. For mid-
 \item Features with low persistence may indicate decomposition artifacts.
 \end{enumerate}
 We expect for valid mid-surfaces:
-β
-0
-p
-e
-r
-s
-≈
-1
-,
-β
-1
-p
-e
-r
-s
-≈
-2
-g
-,
-β
-2
-p
-e
-r
-s
-=
-0.
-β 
-0
-pers
-​
- ≈1,β 
-1
-pers
-​
- ≈2g,β 
-2
-pers
-​
- =0.
+$\beta_0^{\text{pers}} \approx 1$
 \subsection{Topological Integrity Constraints}
 Recent work (TopoSculpt \cite{Hu2024}) proposes \emph{Topological Integrity Betti (TIB)} constraints:
 L
@@ -879,24 +347,47 @@ integrity
  ,
 where $\mathcal{L}{\text{Betti}}$ enforces Betti number matching and $\mathcal{L}{\text{integrity}}$ preserves global topology. These constraints can detect malformed structures that preserve Euler characteristics but violate connectivity. \section{State-of-the-Art Literature Review}
 \subsection{Post-2015 Developments}
+
+
+% \begin{table}[h]
+% \centering
+% \caption{Comparison of mid-surface computation and validation methods.}
+% \begin{tabular}{|l|c|l|l|l|l|}
+% \hline
+% \textbf{Method} & \textbf{Year} & \textbf{Approach} & \textbf{Advantages} & \textbf{Limitations} & \textbf{Reference}\
+% \hline
+% Deflation & 2010 & Iterative offset & Geometrically accurate & Degenerate edges possible & Sheen et al. \cite{Sheen2010}\
+% Medial Axis & 2009 & Distance-based skeleton & Theoretically sound & $O(n^2)$ complexity & Lee \cite{Lee2009}\
+% Feature-based & 2014 & CAD feature operators & Design-aware & Feature-tree dependency & Kim & Mun \cite{Kim2014}\
+% Topology-preserving Skeletonization & 2019 & Digital topology algorithms & Topologically guaranteed & Voxel-based only & Yin et al. \cite{Yin2019}\
+% Persistent Homology-based & 2023 & Multi-scale feature extraction & Robust, noise-tolerant & Filtration design needed & Mishra & Motta \cite{Mishra2023}\
+% Neural Network & 2022 & Deep learning on meshes & Fast, holistic & Data-dependent & Chen et al. \cite{Chen2022}\
+% Topological Integrity (TopoSculpt) & 2024 & Betti+integrity constraints & Complex structures handled & Limited evaluation & Hu et al. \cite{Hu2024}\
+% Our Method (Enhanced) & 2024 & Cellular+persistent homology & Rigorous, bidirectional, $O(V+E+F)$ & Clean decomposition required & This work\
+% \hline
+% \end{tabular}
+% \end{table} \section{Comprehensive Evaluation Framework}
+
 \begin{table}[h]
 \centering
 \caption{Comparison of mid-surface computation and validation methods.}
 \begin{tabular}{|l|c|l|l|l|l|}
 \hline
-\textbf{Method} & \textbf{Year} & \textbf{Approach} & \textbf{Advantages} & \textbf{Limitations} & \textbf{Reference}\
+\textbf{Method} & \textbf{Year} & \textbf{Approach} & \textbf{Advantages} & \textbf{Limitations} & \textbf{Reference} \\
 \hline
-Deflation & 2010 & Iterative offset & Geometrically accurate & Degenerate edges possible & Sheen et al. \cite{Sheen2010}\
-Medial Axis & 2009 & Distance-based skeleton & Theoretically sound & $O(n^2)$ complexity & Lee \cite{Lee2009}\
-Feature-based & 2014 & CAD feature operators & Design-aware & Feature-tree dependency & Kim & Mun \cite{Kim2014}\
-Topology-preserving Skeletonization & 2019 & Digital topology algorithms & Topologically guaranteed & Voxel-based only & Yin et al. \cite{Yin2019}\
-Persistent Homology-based & 2023 & Multi-scale feature extraction & Robust, noise-tolerant & Filtration design needed & Mishra & Motta \cite{Mishra2023}\
-Neural Network & 2022 & Deep learning on meshes & Fast, holistic & Data-dependent & Chen et al. \cite{Chen2022}\
-Topological Integrity (TopoSculpt) & 2024 & Betti+integrity constraints & Complex structures handled & Limited evaluation & Hu et al. \cite{Hu2024}\
-Our Method (Enhanced) & 2024 & Cellular+persistent homology & Rigorous, bidirectional, $O(V+E+F)$ & Clean decomposition required & This work\
+Deflation & 2010 & Iterative offset & Geometrically accurate & Degenerate edges possible & Sheen et al. \cite{Sheen2010} \\
+Medial Axis & 2009 & Distance-based skeleton & Theoretically sound & $O(n^2)$ complexity & Lee \cite{Lee2009} \\
+Feature-based & 2014 & CAD feature operators & Design-aware & Feature-tree dependency & Kim \& Mun \cite{Kim2014} \\
+Topology-preserving Skeletonization & 2019 & Digital topology algorithms & Topologically guaranteed & Voxel-based only & Yin et al. \cite{Yin2019} \\
+Persistent Homology-based & 2023 & Multi-scale feature extraction & Robust, noise-tolerant & Filtration design needed & Mishra \& Motta \cite{Mishra2023} \\
+Neural Network & 2022 & Deep learning on meshes & Fast, holistic & Data-dependent & Chen et al. \cite{Chen2022} \\
+Topological Integrity (TopoSculpt) & 2024 & Betti+integrity constraints & Complex structures handled & Limited evaluation & Hu et al. \cite{Hu2024} \\
+Our Method (Enhanced) & 2024 & Cellular+persistent homology & Rigorous, bidirectional, $O(V+E+F)$ & Clean decomposition required & This work \\
 \hline
 \end{tabular}
-\end{table} \section{Comprehensive Evaluation Framework}
+\end{table}
+
+
 \subsection{Test Dataset and Benchmark}
 \textbf{Evaluation dataset:}
 \begin{itemize}
@@ -994,55 +485,22 @@ Based on theory:
 \end{itemize} \section{Detailed Examples with Proofs}
 \subsection{Example 1: Simple Box}
 \textbf{Solid}: Single box cell $\text{sCell}_{3,0}$.
-Predicted
- 
-mid-surface:
+\textbf{Predicted:}
 \[
-f
-=
-1
-,
-e
-=
-4
-,
-v
-=
-4.
-Predicted mid-surface:\[f=1,e=4,v=4.
-Euler: $\chi = 4 - 4 + 1 = 1$ (a disk). Non-manifold check: $4 - 4 + (1 - 0) = 1 - 0$, so $1=1$. \subsection{Example 2: T-Shaped Part}
-\textbf{Cells}:
-3
-×
-sCell
-3
-,
-1
-,
-3
-×
-iCell
-3
-,
-2
-,
-0
-×
-sCell
-3
-,
-h
-.
-3×sCell 
-3,1
-​
- ,3×iCell 
-3,2
-​
- ,0×sCell 
-3,h
-​
- .
+\hat{f} = \sum_n N_{\mathrm{sCell}_{3,n}},
+\]
+\[
+\hat{e} = 
+\sum_n N_{\mathrm{sCell}_{3,n}}(4-n) +
+\sum_n N_{\mathrm{iCell}_{3,n}},
+\]
+\[
+\hat{v} =
+\sum_n N_{\mathrm{sCell}_{3,n}}(4-2n) +
+\sum_n N_{\mathrm{iCell}_{3,n}} \cdot 2 +
+N_{\mathrm{sCell}_{3,h}}.
+\]
+
 \textbf{Predicted mid-surface entities}:
 Faces: $3\times 1 + 0 = 3$. \
 Edges from sCell: $3\times (4-1) = 9$. \
@@ -1236,19 +694,19 @@ The enhanced framework provides:
 \item \textbf{Software developers}: Efficient, implementable algorithms with clear criteria.
 \item \textbf{Academia}: Bridges classical algebraic topology and modern CAD/CAE workflows.
 \end{itemize} \begin{thebibliography}{99}
-\bibitem{Boussuge2014} F. Boussuge, J.-C. Léon, S. Hahmann, L. Fine, Extraction of generative processes from b-rep shapes and application to idealization transformations,'' \textit{Computer-Aided Design}, vol. 46, 2014, pp. 79–89. \bibitem{Chen2006} G. Chen, Y. S. Ma, G. Thimm, S. H. Tang, Using cellular topology in a unified feature modeling scheme,'' \textit{Computer-Aided Design and Applications}, vol. 3, 2006, pp. 89–98.
-\bibitem{Chen2022} X. Chen, H. Zhu, S. Gao, Mesh quality assessment for CFD simulations using neural networks,'' \textit{Journal of Computational Physics}, 2022. \bibitem{Chazal2021} F. Chazal, B. Michel, An introduction to topological data analysis: Fundamental principles with applications,'' \textit{Frontiers in Artificial Intelligence}, vol. 4, 2021.
-\bibitem{Chong2004} C. S. Chong, A. S. Kumar, K. H. Lee, Automatic solid decomposition and reduction for non-manifold geometric model generation,'' \textit{Computer-Aided Design}, vol. 36, 2004, pp. 1357–1369. \bibitem{Dlotko2023} P. Dłotko, Euler characteristic curves and profiles: a stable shape descriptor for big data problems,'' \textit{Journal of Topology and Geometry}, 2023.
-\bibitem{Hacquard2023} O. Hacquard, V. Lebovici, Euler characteristic tools for topological data analysis,'' arXiv:2303.14040, 2023. \bibitem{Heisserman1991} J. Heisserman, A generalized Euler-Poincaré equation,'' Carnegie Mellon Tech Report, 1991.
-\bibitem{Hu2024} X. Hu et al., TopoSculpt: Betti-steered topological sculpting of 3D fine structures,'' \textit{IEEE Trans. Medical Imaging}, 2024. \bibitem{Iyer2005} N. Iyer et al., Three-dimensional shape searching: State-of-the-art review and future trends,'' \textit{Computer-Aided Design}, vol. 37, no. 5, 2005, pp. 509–530.
-\bibitem{Kim2014} B. C. Kim, D. Mun, Feature-based simplification of boundary representation models using sequential iterative volume decomposition,'' \textit{Comput. Aided Geom. Design}, vol. 38, 2014, pp. 97–107. \bibitem{Krishnamurti2002} R. Krishnamurti, \textit{A Course on Geometric Modeling: Theory, Programming and Practice}, CMU, 2002. \bibitem{Lee2009} S. H. Lee, Offsetting operations on non-manifold topological models,'' \textit{Computer-Aided Design}, vol. 41, no. 11, 2009, pp. 830–846.
-\bibitem{Lee2001} S. H. Lee, H. S. Kim, Sheet modeling and thickening operations based on non-manifold B-rep,'' \textit{ASME DETC01}, 2001. \bibitem{Lee2001b} S. H. Lee, K. Lee, Partial entity structure: A compact non-manifold B-rep based on partial entities,'' \textit{Proc. SMA'01}, 2001, pp. 159–170.
-\bibitem{Lipson1998} H. Lipson, M. Shpitalni, On the topology of sheet metal parts,'' \textit{Journal of Mechanical Design}, vol. 120, no. 1, 1998, pp. 10–16. \bibitem{Lockett2008} H. Lockett, M. Guenov, Similarity measures for mid-surface quality evaluation,'' \textit{Computer-Aided Design}, vol. 40, no. 3, 2008, pp. 368–380.
-\bibitem{Mishra2023} A. Mishra, F. C. Motta, Stability and ML applications of persistent homology using Delaunay–Rips complex,'' \textit{Frontiers in Applied Mathematics and Statistics}, vol. 9, 2023, 1179301. \bibitem{Munkres2000} J. R. Munkres, \textit{Topology}, 2nd ed., Prentice Hall, 2000. \bibitem{Rezayat1996} M. Rezayat, Midsurface abstraction from 3D solid models: general theory and applications,'' \textit{Computer-Aided Design}, vol. 28, 1996, pp. 905–915.
-\bibitem{Sequin2015} C. H. Sequin, Generalized Euler-Poincaré theorem,'' UC Berkeley Tech. Report, 2015. \bibitem{Sheen2010} D.-P. Sheen et al., Solid deflation approach to transform solid into mid-surface,'' \textit{TMCE}, 2010.
-\bibitem{Thakur2009} A. Thakur, A. G. Banerjee, S. K. Gupta, A survey of CAD model simplification for simulation,'' \textit{Computer-Aided Design}, vol. 41, 2009, pp. 65–80. \bibitem{Treeck2003} C. V. Treeck et al., Simulation based on the product model standard IFC,'' \textit{Proc. 8th IBPSA Conf.}, 2003.
-\bibitem{Weiler1986} K. Weiler, Topological structures for geometric modeling,'' Ph.D. Thesis, RPI, 1986. \bibitem{Woo2003} Y. Woo, Fast cell-based decomposition and applications to solid modeling,'' \textit{Computer-Aided Design}, vol. 35, 2003, pp. 969–977.
-\bibitem{Woo2014} Y. Woo, S.-H. Kim, Protrusion recognition from solid model using orthogonal bounding factor,'' \textit{J. Mech. Sci. Tech.}, vol. 28, 2014, pp. 1759–1764. \bibitem{Woo2002} Y. Woo, H. Sakurai, Recognition of maximal features by volume decomposition,'' \textit{Computer-Aided Design}, vol. 34, 2002, pp. 195–207.
-\bibitem{Wu2014} H. Wu, S. Shuming, Automatic swept volume decomposition for hexahedral meshing,'' \textit{Proc. 23rd Int. Meshing Roundtable}, 2014, pp. 137–148. \bibitem{Yamaguchi2002} F. Yamaguchi, \textit{Computer-Aided Geometric Design: A Totally Four-Dimensional Approach}, Springer, 2002. \bibitem{Yamaguchi1995} Y. Yamaguchi, F. Kimura, Non-manifold topology based on coupling entities,'' \textit{IEEE Comp. Graph. Appl.}, vol. 15, 1995, pp. 42–50.
+\bibitem{Boussuge2014} F. Boussuge, J.-C. Léon, S. Hahmann, L. Fine, ``Extraction of generative processes from b-rep shapes and application to idealization transformations,'' \textit{Computer-Aided Design}, vol. 46, 2014, pp. 79–89. \bibitem{Chen2006} G. Chen, Y. S. Ma, G. Thimm, S. H. Tang, ``Using cellular topology in a unified feature modeling scheme,'' \textit{Computer-Aided Design and Applications}, vol. 3, 2006, pp. 89–98.
+\bibitem{Chen2022} X. Chen, H. Zhu, S. Gao, ``Mesh quality assessment for CFD simulations using neural networks,'' \textit{Journal of Computational Physics}, 2022. \bibitem{Chazal2021} F. Chazal, B. Michel, An introduction to topological data analysis: Fundamental principles with applications,'' \textit{Frontiers in Artificial Intelligence}, vol. 4, 2021.
+\bibitem{Chong2004} C. S. Chong, A. S. Kumar, K. H. Lee, ``Automatic solid decomposition and reduction for non-manifold geometric model generation,'' \textit{Computer-Aided Design}, vol. 36, 2004, pp. 1357–1369. \bibitem{Dlotko2023} P. Dłotko, Euler characteristic curves and profiles: a stable shape descriptor for big data problems,'' \textit{Journal of Topology and Geometry}, 2023.
+\bibitem{Hacquard2023} O. Hacquard, V. Lebovici, ``Euler characteristic tools for topological data analysis,'' arXiv:2303.14040, 2023. \bibitem{Heisserman1991} J. Heisserman, A generalized Euler-Poincaré equation,'' Carnegie Mellon Tech Report, 1991.
+\bibitem{Hu2024} X. Hu et al., ``TopoSculpt: Betti-steered topological sculpting of 3D fine structures,'' \textit{IEEE Trans. Medical Imaging}, 2024. \bibitem{Iyer2005} N. Iyer et al., Three-dimensional shape searching: State-of-the-art review and future trends,'' \textit{Computer-Aided Design}, vol. 37, no. 5, 2005, pp. 509–530.
+\bibitem{Kim2014} B. C. Kim, D. Mun, ``Feature-based simplification of boundary representation models using sequential iterative volume decomposition,'' \textit{Comput. Aided Geom. Design}, vol. 38, 2014, pp. 97–107. \bibitem{Krishnamurti2002} R. Krishnamurti, \textit{A Course on Geometric Modeling: Theory, Programming and Practice}, CMU, 2002. \bibitem{Lee2009} S. H. Lee, ``Offsetting operations on non-manifold topological models,'' \textit{Computer-Aided Design}, vol. 41, no. 11, 2009, pp. 830–846.
+\bibitem{Lee2001} S. H. Lee, H. S. Kim, ``Sheet modeling and thickening operations based on non-manifold B-rep,'' \textit{ASME DETC01}, 2001. \bibitem{Lee2001b} S. H. Lee, K. Lee, Partial entity structure: A compact non-manifold B-rep based on partial entities,'' \textit{Proc. SMA'01}, 2001, pp. 159–170.
+\bibitem{Lipson1998} H. Lipson, M. Shpitalni, ``On the topology of sheet metal parts,'' \textit{Journal of Mechanical Design}, vol. 120, no. 1, 1998, pp. 10–16. \bibitem{Lockett2008} H. Lockett, M. Guenov, Similarity measures for mid-surface quality evaluation,'' \textit{Computer-Aided Design}, vol. 40, no. 3, 2008, pp. 368–380.
+\bibitem{Mishra2023} A. Mishra, F. C. Motta, ``Stability and ML applications of persistent homology using Delaunay–Rips complex,'' \textit{Frontiers in Applied Mathematics and Statistics}, vol. 9, 2023, 1179301. \bibitem{Munkres2000} J. R. Munkres, \textit{Topology}, 2nd ed., Prentice Hall, 2000. \bibitem{Rezayat1996} M. Rezayat, ``Midsurface abstraction from 3D solid models: general theory and applications,'' \textit{Computer-Aided Design}, vol. 28, 1996, pp. 905–915.
+\bibitem{Sequin2015} C. H. Sequin, ``Generalized Euler-Poincaré theorem,'' UC Berkeley Tech. Report, 2015. \bibitem{Sheen2010} D.-P. Sheen et al., Solid deflation approach to transform solid into mid-surface,'' \textit{TMCE}, 2010.
+\bibitem{Thakur2009} A. Thakur, A. G. Banerjee, S. K. Gupta, ``A survey of CAD model simplification for simulation,'' \textit{Computer-Aided Design}, vol. 41, 2009, pp. 65–80. \bibitem{Treeck2003} C. V. Treeck et al., Simulation based on the product model standard IFC,'' \textit{Proc. 8th IBPSA Conf.}, 2003.
+\bibitem{Weiler1986} K. Weiler, ``Topological structures for geometric modeling,'' Ph.D. Thesis, RPI, 1986. \bibitem{Woo2003} Y. Woo, Fast cell-based decomposition and applications to solid modeling,'' \textit{Computer-Aided Design}, vol. 35, 2003, pp. 969–977.
+\bibitem{Woo2014} Y. Woo, S.-H. Kim, ``Protrusion recognition from solid model using orthogonal bounding factor,'' \textit{J. Mech. Sci. Tech.}, vol. 28, 2014, pp. 1759–1764. \bibitem{Woo2002} Y. Woo, H. Sakurai, ``Recognition of maximal features by volume decomposition,'' \textit{Computer-Aided Design}, vol. 34, 2002, pp. 195–207.
+\bibitem{Wu2014} H. Wu, S. Shuming, ``Automatic swept volume decomposition for hexahedral meshing,'' \textit{Proc. 23rd Int. Meshing Roundtable}, 2014, pp. 137–148. \bibitem{Yamaguchi2002} F. Yamaguchi, \textit{Computer-Aided Geometric Design: A Totally Four-Dimensional Approach}, Springer, 2002. \bibitem{Yamaguchi1995} Y. Yamaguchi, F. Kimura, ``Non-manifold topology based on coupling entities,'' \textit{IEEE Comp. Graph. Appl.}, vol. 15, 1995, pp. 42–50.
 \bibitem{Yin2019} G. Yin, X. Xiao, F. Cirak, ``Topologically robust CAD model generation for structural optimization,'' arXiv:1906.07631, 2019.
 \end{thebibliography} \end{document}
